style.css
header {
    display: flex;
    justify-content: center;
    margin:auto;
}

nav{
    background-color: rgb(40, 252, 86);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 50px;
    padding: 10px;
}

#current {
    color: rgb(73,57,44);
}

.logo{
    width: 100%;
    display: flex;
    justify-content: center;
}

.logo img{
    width:280px;
}

.background{
    background-color: rgb(111, 209, 247);
    display: flex;
    flex-direction: column;
    align-items: center;
}

#lottie-one{
    margin-top: 40px;
}

#msg1{
    margin-top: -55px;
}

#msg2{
    margin-top: -15px;
}

#lottie-two{
    margin-top: -10px;
}

a {
    text-decoration: none;
    color: rgb(250,121,33);
}

.enter-container {
    width: 100%;
    height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.form-container {
    width: 350px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    border: solid black;
    padding: 50px;
}

.form {
    margin-left: 20px;
}

.form-container-two {
    width: 70%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    border: solid black;
    padding: 50px;
    margin-top: 150px;
    margin-left: 10%;
    margin-bottom: 100px;
}

.form-group {
    margin-top: 20px;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
}

textarea {
    margin-top: 10px;
    height: 100px;
    resize: none;
}

.option {
    margin: 10px;
}

.checkout-img {
    width: 50px;
    aspect-ratio: 1/1;
}

#voucher {
    margin: 10px;
    margin-left: 0px;
    width: 150px;
}

.price-details {
    width: 278px;
    margin: 25px;
    margin-left: 0px;
    padding: 25px;
    background-color: rgb(241, 249, 255);
}

.checkout-price {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#method {
    display: flex;
    flex-direction: row;
    margin-top: 20px;

}

#method label{
    margin-right: 20px;
}

#card-name {
    width: 200px;
    margin-top: 10px;
}

#card-no {
    width: 200px;
    margin-top: 10px;
}

#expiry {
    width: 130px;
    margin-top: 10px;
}

#cvv {
    width: 50px;
    margin-top: 10px;
}

.final-price {
    width: 278px;
    margin: 25px;
    margin-left: 0px;
    padding: 25px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: rgb(241, 249, 255);
}

.order-list {
    min-height: 50px;
    width: 250px;
    border: dotted rgb(177, 177, 177);
    margin-top: 10px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.checkout-item {
    margin: 10px;  
}

.login {
    background-color: rgb(111, 209, 247);
}

.collection{
    background-color: rgb(241, 249, 255);
    margin: 50px;
    border-radius: 5px;
    padding: 40px;
}

.contact {
    background-color: rgb(241, 249, 255);
    margin: 20px;
    border-radius: 5px;
    padding: 40px;
    display: flex;
    flex-direction: row;
}

.contents{
    background-color: rgb(241, 249, 255);
    margin: 50px;
    width: auto;
    border-radius: 5px;
    padding: 40px;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

#account-page {
    margin-top: 20px;
}

.cart-list{
    background-color: rgb(241, 249, 255);
    margin: 50px;
    width: auto;
    border-radius: 5px;
    padding: 40px;
}

.container {
    display: flex;
    width: 100%;
    background-color: aliceblue;
    flex-wrap: wrap;
    margin-top: 50px;
    justify-content: center;
}

.item {
    padding: 2%;
    flex-grow: 1;
    flex-basis: 15%;
    display: flex;
    flex-direction: column;
    cursor: pointer;
    border: 1px solid rgb(191, 191, 191);
}

.item-cart {
    padding: 2%;
    display: flex;
    flex-direction: row;
    border: 1px solid rgb(191, 191, 191)
}

.discount {
    float: left;
    width:  100%;
    height: 100%;
    object-fit: cover;

}

.banner img {
    float: left;
    width:  100%;
    height: 100%;
    object-fit: cover;
}

.item-cart .img {
    width: 150px;
}

.info {
    margin-top: -15px;
    text-align: center;
    font-size: 20px;
    margin-left: 8px;
    margin-right: 8px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.cart-info {
    margin-top: -12px;
    font-size: 15px;
    margin-left: 8px;
    margin-right: 8px;
}

.cart-details {
    height: 17.25px;
}

.cart-end {
    font-size: 15px;
    display: flex;
    flex-direction: column;
    justify-content: end;
    padding: 10px;
    margin-left: 10%;
}

#insufficient {
    cursor: pointer;
}

.pdt {
    cursor: pointer;
}


.price {
    color: aliceblue;
    background-color: rgb(250,121,33);
    width: 90%;
    padding: 4%;
    border-radius: 5px;
    font-size: 25px;
    cursor: pointer;
}

.pdt-quantity {
    width: 24px;
    text-align: center;
}

.cart-quantity {
    width: 24px;
    text-align: center;
}

.cart-img {
    max-width:200px;
}

.cart-img img{
    width: 100%;
    aspect-ratio: 1/1;
    object-fit: cover;

}

.box img{
    width: 100%;
    aspect-ratio: 1/1;
    object-fit: cover;

}

.icons{
    font-size: 220%;
    margin-left: 5px;
    margin-right: 5px;
    display: flex;
    align-items: center;
}

.button {
    border: 1px solid rgb(250,121,33);
    background-color: white;
    width: 70px;
    margin-left: 90%;
    margin-bottom: 40px;
    padding: 1%;
    text-align: center;
}

html {
    font-family: 'Kanit', sans-serif;
    width: 100%;
    -ms-overflow-style: none; /* Edge, Internet Explorer */
    scrollbar-width: none; /* Firefox */
    overflow-y: scroll;
    }
    html:: -webkit-scrollbar {
    display: none; /* Chrome, Safari, Opera */
    }

.support {
    display: flex;
    flex-direction: column;
    text-align: center;
    overflow-wrap: break-word;
}

.head-text {
    margin: 3px;
}

.help {
    margin: 2px;
    margin-left: 30px;
}
/* ... */

